Added Genre mapper to int range, removed 2 columns, Name and Rank

--- a/DataSetGames_Project.ipynb
+++ b/DataSetGames_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "id": "acb78fb4-d55a-45d2-baf0-d9c7bacfc33d",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "id": "2eeceeb1-a84f-4921-8504-0262311e9320",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "4     11.27      8.89     10.22         1.00         31.37  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "id": "4a1b9dfa-9770-41b4-a02e-562fb01796be",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "       'Strategy'], dtype=object)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "id": "20ab5bfc-d176-4186-8ddd-e668eebbc384",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "       '3DO', 'GG', 'PCFX'], dtype=object)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "id": "9e83bb67-e443-4ea8-a7c1-71e016b390ac",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "579"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 34,
    "id": "2e65cac5-6ffb-47d4-9669-309689e7cdaf",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 35,
    "id": "3145a0fe-dc32-48d8-a95a-9cbae77c9eb6",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "max       10.570000     82.740000  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 36,
    "id": "0ec67683",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_592/1089218415.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\kryst\\AppData\\Local\\Temp\\ipykernel_13076\\1089218415.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  correlations = games_dataset.corr()\n"
      ]
     },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 37,
    "id": "85a52867",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 38,
    "id": "6737a819",
    "metadata": {},
    "outputs": [
@@ -1046,32 +1046,44 @@
        " 'UIG Entertainment': 579}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "for i in range(len(publisher_list)):\n",
-    "    publisher_dict[publisher_list[i]] = i + 1\n",
-    "    \n",
-    "publisher_dict"
+    "    publisher_dict[publisher_list[i]] = i + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 39,
    "id": "862b171d",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.1724107265472412\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0          1\n",
+       "1          1\n",
+       "2          1\n",
+       "3          1\n",
+       "4          1\n",
+       "        ... \n",
+       "16593    189\n",
+       "16594     53\n",
+       "16595      5\n",
+       "16596    509\n",
+       "16597    172\n",
+       "Name: Publisher, Length: 16598, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1082,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "id": "3510f8f4",
    "metadata": {},
    "outputs": [
@@ -1323,7 +1335,7 @@
        "[16598 rows x 11 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,11 +1346,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "5a5aff33",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Platform</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>NA_Sales</th>\n",
+       "      <th>EU_Sales</th>\n",
+       "      <th>JP_Sales</th>\n",
+       "      <th>Other_Sales</th>\n",
+       "      <th>Global_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41.49</td>\n",
+       "      <td>29.02</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>8.46</td>\n",
+       "      <td>82.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NES</td>\n",
+       "      <td>1985.0</td>\n",
+       "      <td>Platform</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29.08</td>\n",
+       "      <td>3.58</td>\n",
+       "      <td>6.81</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>40.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Racing</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.85</td>\n",
+       "      <td>12.88</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>35.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.75</td>\n",
+       "      <td>11.01</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>2.96</td>\n",
+       "      <td>33.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GB</td>\n",
+       "      <td>1996.0</td>\n",
+       "      <td>Role-Playing</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.27</td>\n",
+       "      <td>8.89</td>\n",
+       "      <td>10.22</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>31.37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Platform    Year         Genre  Publisher  NA_Sales  EU_Sales  JP_Sales  \\\n",
+       "0      Wii  2006.0        Sports          1     41.49     29.02      3.77   \n",
+       "1      NES  1985.0      Platform          1     29.08      3.58      6.81   \n",
+       "2      Wii  2008.0        Racing          1     15.85     12.88      3.79   \n",
+       "3      Wii  2009.0        Sports          1     15.75     11.01      3.28   \n",
+       "4       GB  1996.0  Role-Playing          1     11.27      8.89     10.22   \n",
+       "\n",
+       "   Other_Sales  Global_Sales  \n",
+       "0         8.46         82.74  \n",
+       "1         0.77         40.24  \n",
+       "2         3.31         35.82  \n",
+       "3         2.96         33.00  \n",
+       "4         1.00         31.37  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games_dataset.drop('Name', inplace=True, axis=1)\n",
+    "games_dataset.drop('Rank', inplace=True, axis=1)\n",
+    "games_dataset.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3085aba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Platform</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>NA_Sales</th>\n",
+       "      <th>EU_Sales</th>\n",
+       "      <th>JP_Sales</th>\n",
+       "      <th>Other_Sales</th>\n",
+       "      <th>Global_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41.49</td>\n",
+       "      <td>29.02</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>8.46</td>\n",
+       "      <td>82.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NES</td>\n",
+       "      <td>1985.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29.08</td>\n",
+       "      <td>3.58</td>\n",
+       "      <td>6.81</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>40.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.85</td>\n",
+       "      <td>12.88</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>35.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.75</td>\n",
+       "      <td>11.01</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>2.96</td>\n",
+       "      <td>33.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GB</td>\n",
+       "      <td>1996.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.27</td>\n",
+       "      <td>8.89</td>\n",
+       "      <td>10.22</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>31.37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Platform    Year  Genre  Publisher  NA_Sales  EU_Sales  JP_Sales  \\\n",
+       "0      Wii  2006.0      1          1     41.49     29.02      3.77   \n",
+       "1      NES  1985.0      2          1     29.08      3.58      6.81   \n",
+       "2      Wii  2008.0      3          1     15.85     12.88      3.79   \n",
+       "3      Wii  2009.0      1          1     15.75     11.01      3.28   \n",
+       "4       GB  1996.0      4          1     11.27      8.89     10.22   \n",
+       "\n",
+       "   Other_Sales  Global_Sales  \n",
+       "0         8.46         82.74  \n",
+       "1         0.77         40.24  \n",
+       "2         3.31         35.82  \n",
+       "3         2.96         33.00  \n",
+       "4         1.00         31.37  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Genre_list = games_dataset.Genre.unique()\n",
+    "Genre_dict = {}\n",
+    "for i in range(len(Genre_list)):\n",
+    "    Genre_dict[Genre_list[i]] = i + 1\n",
+    "games_dataset = games_dataset.replace(Genre_dict.keys(), Genre_dict.values())\n",
+    "    \n",
+    "games_dataset.head(5)"
+   ]
   }
  ],
  "metadata": {
